[package]
name = "fort500"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime" }
env_logger = "0.9.0"
read_input = "0.8.6"
colored = "2.0.0"
parser = { path = "../parser" }
log = "0.4"
log-derive = "0.4"